<resources>
    <string name="app_name">MySocialPlatformApp</string>
    <string name="plumbing">Plumbing</string>
    <string name="gardening">Gardening</string>
    <string name="it_service">IT Service</string>
    <string name="decorating">Decorating</string>
    <string name="electricity">Electricity</string>
    <string name="cleaning">Cleaning</string>
    <string name="i_am_a_proffesional_worker_i_have_been_doing_this_since_2009">I am a professional worker. I have been doing this since 2009</string>
    <string name="send_message">Send Message</string>
    <string name="request_service">COLLABORATE!</string>
    <string name="_0767555419">0767555419</string>
    <string name="_4_9">4.9</string>
    <string name="services">Services</string>
    <string name="announcements">Announcements</string>
    <string name="fingerprint_not_recognized_try_pin_instead">Fingerprint not recognized? Try PIN instead:</string>
    <string name="_1234">1234</string>
    <string name="login">Login</string>
    <string name="jane_doe">Jane Doe</string>
    <string name="mark_brian">Mark Brian</string>
    <string name="description">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</string>
    <string name="_29_aug_2019">29 Aug 2019</string>
    <string name="my_profile">My profile</string>
    <string name="bonus_points">Bonus Points</string>
    <string name="logout">Logout</string>
    <string name="category">Category</string>
    <string name="emergency">Emergency</string>
    <string name="emergencies">Emergencies</string>

    <string-array name="months">
        <item>January</item>
        <item>February</item>
        <item>March</item>
        <item>April</item>
        <item>May</item>
        <item>June</item>
        <item>July</item>
        <item>August</item>
        <item>September</item>
        <item>October</item>
        <item>November</item>
        <item>December</item>
    </string-array>

</resources>
